--- a/styles.css
+++ b/styles.css
@@ -27,5 +27,128 @@ p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
 }
 
+:root {
+    --emerald-50: #ecfdf5;
+    --emerald-100: #d1fae5;
+    --emerald-200: #a7f3d0;
+    --emerald-300: #6ee7b7;
+    --emerald-400: #34d399;
+    --emerald-500: #10b981;
+    --emerald-600: #059669;
+    --emerald-700: #047857;
+    --emerald-800: #065f46;
+    --emerald-900: #064e3b;
+    --emerald-950: #022c22;
+    font-size: 16px;
+}
+
+body {
+    height: 100vh;
+    background-color: var(--emerald-50);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: "open-sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 375;
+    user-select: text;
+}
+
+.heading {
+    font-family: "open-sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    font-size: 3em;
+    color: var(--emerald-950);
+    text-align: center;
+}
+
+.player-names {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 2em;
+    margin-bottom: 2rem;
+    user-select: none;
+    flex-wrap: wrap;
+}
+
+.player-names input[type="text"] {
+    appearance: none;
+    border: none;
+    border-bottom: 1px solid var(--emerald-950);
+    background-color: var(--emerald-50);
+    height: 3em;
+    padding: 1em 0 0 1em;
+    font-size: 1.2rem;
+    font-family: "open-sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 375;
+}
+
+.player-names input[type="text"]:focus {
+    outline: none;
+    border-bottom: 1px solid var(--emerald-950);
+}
+
+.player-names input[type="text"]::placeholder {
+    color: var(--emerald-950);
+}
+
+.player-names button {
+    padding: 12px 32px;
+    background-color: var(--emerald-950);
+    color: var(--emerald-50);
+    border: none;
+    cursor: pointer;
+    user-select: none;
+}
+
+.player-turn {
+    font-size: 1.2rem;
+    font-weight: 375;
+    height: 60.78px;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 2rem;
+}
+
+.player-winner {
+    font-size: 1.2rem;
+    height: 60.78px;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 2rem;
+}
+
+.display-none {
+    display: none;
+}
+
+.tic-tac-toe {
+    display: grid;
+    grid-template-columns: repeat(3, 5em);
+    grid-template-rows: repeat(3, 5em);
+    user-select: none;
+    margin-bottom: 2em;
+}
+
+.tic-tac-toe * {
+    border: 1px solid var(--emerald-950);
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    font-size: 3rem;
+    color: var(--emerald-950);
+}
+
+.game-button {
+    padding: 12px 32px;
+    background-color: var(--emerald-950);
+    color: var(--emerald-50);
+    border: none;
+    cursor: pointer;
+    user-select: none;
+}
+
+
 
 
