--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
     font-family: "open-sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     font-weight: 800;
     font-size: 3em;
-    color: var(--emerald-950);
+    color: var(--emerald-900);
     text-align: center;
 }
 
@@ -75,10 +75,10 @@ body {
 .player-names input[type="text"] {
     appearance: none;
     border: none;
-    border-bottom: 1px solid var(--emerald-950);
+    border-bottom: 1px solid var(--emerald-900);
     background-color: var(--emerald-50);
     height: 3em;
-    padding: 1em 0 0 1em;
+    padding: 1em 1em 0 1em;
     font-size: 1.2rem;
     font-family: "open-sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 375;
@@ -95,11 +95,16 @@ body {
 
 .player-names button {
     padding: 12px 32px;
-    background-color: var(--emerald-950);
+    background-color: var(--emerald-900);
     color: var(--emerald-50);
     border: none;
     cursor: pointer;
     user-select: none;
+    border-radius: 4px;
+}
+
+.player-names button:hover {
+    background-color: var(--emerald-950);
 }
 
 .player-turn {
@@ -132,21 +137,28 @@ body {
 }
 
 .tic-tac-toe * {
-    border: 1px solid var(--emerald-950);
+    border: 1px solid var(--emerald-900);
     cursor: pointer;
     display: grid;
     place-items: center;
     font-size: 3rem;
-    color: var(--emerald-950);
+    color: var(--emerald-900);
 }
 
 .game-button {
     padding: 12px 32px;
-    background-color: var(--emerald-950);
+    background-color: var(--emerald-900);
     color: var(--emerald-50);
     border: none;
     cursor: pointer;
     user-select: none;
+    border-radius: 4px;
+    font-size: 3em;
+    white-space: nowrap;
+}
+
+.game-button:hover {
+    background-color: var(--emerald-950);
 }
 
 
